# cyberwave-edge-core

./: .gitignore  README.md  build.sh  conftest.py  pyproject.toml
.github/workflows/: release-apt-get.yml  release-pipy.yml
cyberwave_edge_core/: __init__.py  device_utils.py  main.py  startup.py
scripts/: build_emulated_binary_package.sh  test_emulated_binary_package.sh
tests/: test_integration_startup.py  test_startup_child_camera_twins.py  test_startup_core.py  test_twin_file_sync.py
