[project]
name = "cyberwave-edge-core"
version = "0.0.10"
description = "The core component of the Cyberwave Edge Node"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Cyberwave", email = "info@cyberwave.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "cyberwave>=0.3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
cyberwave-edge-core = "cyberwave_edge_core.main:cli"

[project.urls]
Homepage = "https://cyberwave.com"
Documentation = "https://docs.cyberwave.com"
Repository = "https://github.com/cyberwave-os/cyberwave-edge-core"
Issues = "https://github.com/cyberwave-os/cyberwave-edge-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cyberwave_edge_core"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
